@@ -1,4 +1,4 @@
-.TH VIFM 1 "January 19, 2016" "vifm 0.8.1"
+.TH VIFM 1 "January 21, 2016" "vifm 0.8.1"
 .\" ---------------------------------------------------------------------------
 .SH NAME
 .\" ---------------------------------------------------------------------------
@@ -525,8 +525,11 @@ go to visual mode into selection amending state preserving current selection.
 .BI gv
 go to visual mode restoring last selection.
 .TP
-.BI gs
-restore last t selection, like gv for visual mode selection.
+.BI [reg]gs
+when no register is specified, restore last t selection (similar to what
+gv does for visual mode selection).  If register is present, then all
+files listed in that register and which are visible in current view are
+selected.
 .TP
 .BI gu<selector>
 make names of selected files lowercase.
